Minor Gap Fixed

--- a/style.scss
+++ b/style.scss
@@ -1038,7 +1038,7 @@ $dark-blue-color: #397383;
   }
   .mission_vision_values {
     padding: 4em 2em;
-    gap: 5em;
+    gap: 0em;
 
     .main {
       flex-direction: column;
